# trial_issac_sim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  into.sh  pyproject.toml  python.sh  skills-lock.json
.codex/: README.md
.container_tmp/: check_tomato_setup.py  inspect_franka.py  print_franka_frames.py
config/: plotjuggler_config.xml  scene.yaml
docker/: Dockerfile  entrypoint.sh
docs/: index.html  planning_levelup_tomato_sim.html  (+3 more)
poc_code/: README.md  build.sh  into.sh  pyproject.toml  run.sh
poc_code/scripts/: isaac_franka_smoke.py
poc_code/src/tomato_harvest_poc/: __init__.py  isaac_gui_runtime.py  isaac_native_runtime.py  native_harvest.py  render.py  sprint_checks.py
poc_code/tests/: test_isaac_franka_smoke.py  test_isaac_gui_runtime.py  test_isaac_runtime.py  test_isaac_smoke.py  test_native_harvest.py  test_run_poc_args.py  test_service.py
poc_code/ui/: index.html  styles.css
src/franka_ros2_control/: CMakeLists.txt  franka_ros2_control  franka_ros2_control_plugin.xml  package.xml
src/franka_ros2_control/config/: franka_controllers.yaml  franka_controllers_effort.yaml  franka_ros2_control.urdf  joint_limits.yaml  moveit_servo.yaml  ompl_planning.yaml  panda.srdf
src/franka_ros2_control/include/franka_ros2_control/: isaac_sim_hardware_interface.hpp  local_safety_observation.hpp  motion_command_executor_core.hpp
src/franka_ros2_control/launch/: franka_ros2_control.launch.py  move_group.launch.py
src/franka_ros2_control/src/: isaac_sim_hardware_interface.cpp  local_safety_observation.cpp  local_safety_observation_node.cpp  motion_command_executor_core.cpp  motion_command_executor_node.cpp
src/franka_ros2_control/tests/: test_local_safety_observation.cpp  test_motion_command_executor_core.cpp
src/tomato_harvest_sim/robot/: __init__.py  behavior_planner_node.py  geometry.py  motion.py  motion_command_executor_node.py  motion_command_node.py  moveit_service.py  package.xml  planner.py  planner_backend.py  robot_node.py  runtime.py  setup.py  tomato_detector_node.py  trajectory_execution.py  trajectory_monitor_node.py  trajectory_planner_node.py  trajectory_tracking.py
src/tomato_harvest_sim/robot/api/: __init__.py  perception.py  planner.py  trajectory_tracking.py
src/tomato_harvest_sim/robot/behavior_planner/: __init__.py  __main__.py  grasp_diagnostics.py  intent_builder.py  node.py  phase_machine.py  phase_motion.py  planner.py
src/tomato_harvest_sim/robot/behavior_planner/config/: phase_execution.yaml
src/tomato_harvest_sim/robot/behavior_planner/tests/: test_behavior_planner.py  test_behavior_planner_node_outcomes.py  test_grasp_diagnostics.py  test_import.py  test_phase_machine.py
src/tomato_harvest_sim/robot/docs/: ARCHITECTURE.md  CENTRALIZED_PHASE_EXECUTION_POLICY.md  DETAIL_PERCEPTION.md  DETAIL_PLANNER.md  DETAIL_TRAJECTORY_TRACKING.md  GRIPPER_CONTROL_ROS2_CONTROL_OPTIONS.md  REFACTOR_TRAJECTORY_TRACKING.md  ROS2_COMPONENT_ARCHITECTURE.md  ROS2_CONTROL_TRAJECTORY_EXECUTION_ARCHITECTURE.md
src/tomato_harvest_sim/robot/execute_manager/: __init__.py  motion_command.py  plan_adoption.py  plan_arbitration.py  pose_tracking_observability.py  servo_execution_adapter.py  terminal_pose_tracking.py  trajectory_monitor.py
src/tomato_harvest_sim/robot/execute_manager/tests/: test_import.py  test_motion_command.py  test_plan_adoption.py  test_plan_arbitration.py  test_pose_tracking_observability.py  test_servo_execution_adapter.py  test_step36_execution_intent.py  test_trajectory_monitor.py
src/tomato_harvest_sim/robot/launch/: franka_controllers.launch.py  harvest_sim.launch.py  robot_nodes.launch.py
src/tomato_harvest_sim/robot/motion_command_executor_node/: __init__.py  __main__.py  node.py
src/tomato_harvest_sim/robot/motion_command_executor_node/tests/: test_import.py
src/tomato_harvest_sim/robot/motion_command_node/: __init__.py  __main__.py  node.py
src/tomato_harvest_sim/robot/motion_command_node/tests/: test_import.py  test_motion_command_node.py
src/tomato_harvest_sim/robot/motion_planner/: __init__.py  __main__.py  harvest_pose_planner.py  hybrid_event.py  local_planner.py  local_planner_stub.py  moveit_service.py  moveit_service_bridge.py  node.py  observability.py  phase_suffix_replan.py  place_suffix_replan.py  planning_diagnostics.py  pregrasp_planner.py  replan_trigger.py  ros_python.py  safe_online_solver.py  state_aggregation.py
src/tomato_harvest_sim/robot/motion_planner/moveit_bridge/: __init__.py  client.py  config.py  geometry.py  goal_planner.py  phase_planner.py  phase_policy.py  planning_scene.py  request_builder.py  trajectory.py
src/tomato_harvest_sim/robot/motion_planner/tests/: test_harvest_pose_planner.py  test_hybrid_event.py  test_import.py  test_local_planner.py  test_local_planner_stub.py  test_moveit_planner_backend.py  test_observability.py  test_phase_suffix_replan.py  test_place_suffix_replan.py  test_planning_diagnostics.py  test_pregrasp_planner.py  test_replan_trigger.py  test_ros_python.py  test_safe_online_solver.py  test_state_aggregation.py
src/tomato_harvest_sim/robot/moveit_config/: joint_limits.yaml  kinematics.yaml  panda.srdf
src/tomato_harvest_sim/robot/msg/: perception.py  planner.py  trajectory_tracking.py
src/tomato_harvest_sim/robot/perception/: __init__.py  __main__.py  node.py  target_estimator.py
src/tomato_harvest_sim/robot/perception/tests/: test_import.py
src/tomato_harvest_sim/robot/planner/: __init__.py  moveit_service.py  moveit_service_bridge.py  pregrasp_planner.py
src/tomato_harvest_sim/robot/ros2_control/: __init__.py  controller_manager.py  controller_state.py  joint_trajectory_controller_bridge.py
src/tomato_harvest_sim/robot/trajectory_monitor_node/: __init__.py  __main__.py  node.py
src/tomato_harvest_sim/robot/trajectory_monitor_node/tests/: test_import.py  test_trajectory_monitor_node.py
src/tomato_harvest_sim/robot/trajectory_tracking/: __init__.py  action_client.py  coordinator.py  execution.py  execution_monitor.py  phase_spec_loader.py  reference_tracking.py  ros2_action_trajectory_port.py  state_store.py  tracker.py
(+289 files in other folders)
