[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tomato-harvest-sim"
version = "0.1.0"
description = "Separated Isaac Sim and ROS 2 tomato harvest simulator."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tomato_harvest_robot_node = "tomato_harvest_sim.robot.robot_node:main"
tomato_harvest_simulator_node = "tomato_harvest_sim.simulator.simulator_node:main"
