[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tomato-harvest-sim"
version = "0.1.0"
description = "Separated Isaac Sim and ROS 2 tomato harvest simulator."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tomato_detector_node = "tomato_harvest_sim.robot.tomato_detector_node:main"
behavior_planner_node = "tomato_harvest_sim.robot.behavior_planner_node:main"
trajectory_planner_node = "tomato_harvest_sim.robot.trajectory_planner_node:main"
trajectory_monitor_node = "tomato_harvest_sim.robot.trajectory_monitor_node:main"
motion_command_node = "tomato_harvest_sim.robot.motion_command_node:main"
motion_command_executor_node = "tomato_harvest_sim.robot.motion_command_executor_node:main"
tomato_harvest_simulator_node = "tomato_harvest_sim.simulator.simulator_node:main"
