[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tomato-harvest-poc"
version = "0.1.0"
description = "Tomato harvest simulator PoC scaffold for Isaac Sim and ROS 2 Jazzy."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
