<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomato_harvest_robot</name>
  <version>0.1.0</version>
  <description>
    ROS2 robot node for tomato harvest simulation.
    Drives HarvestRuntime at 30 Hz, communicates with simulator node
    and franka_ros2_control via ROS2 topics and actions.
  </description>
  <maintainer email="kodamaatsushi428@gmail.com">atsushi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
