<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tomato_harvest_robot</name>
  <version>0.1.0</version>
  <description>
    ROS2 robot nodes for tomato harvest simulation.
    Five component nodes (perception / behavior_planner / motion_planner /
    trajectory_monitor / motion_command) that communicate with the simulator
    node and the C++ motion_command_executor in franka_ros2_control.
  </description>
  <maintainer email="kodamaatsushi428@gmail.com">atsushi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
